# PrivIMU

./: .gitignore  APPLY_STREAMLIT_WOW.ps1  ARTIFACT_INDEX.md  CLAUDE_LOCAL_HANDOFF.md  GIT_PUSH_INSTRUCTIONS.md  INSTALL_STREAMLIT_WOW.md  LICENSE  Makefile  PrivIMU_colab_motionsense_download_fix.patch  PrivIMU_deployment_ready.patch  README.md  Workshop_Meeting1314_Briefing.html  pyproject.toml  requirements.txt  streamlit_app.py  task.ps1
.streamlit/: config.toml
PrivIMU_streamlit_3wow_features_overlay/: streamlit_app.py
data/: README.md  download.py
demo/: README.md
docs/: COLAB_TROUBLESHOOTING.md  DELIVERABLES.md  DEPLOYMENT.md  ETHICS_AND_LIMITS.md  EXPERIMENT_PROTOCOL.md  SOTA_TABLE.md  STREAMLIT_WOW_FEATURES.md
examples/: README.md  demo_motionsense_like.csv
handoff/: 00_CLAUDE_HANDOFF_MASTER.md  01_PRESENTATION_BASELINE_AND_REMAKE_BRIEF.md  02_REPORT_PDF_OBJECTIVE_AND_OUTLINE.md  03_DELIVERABLES_WOW_CHECKLIST.md  04_CLAUDE_LOCAL_PROMPT.md  email_to_lecturer.html
notebooks/: PrivIMU_MotionSense_Demo.ipynb
report/: PrivIMU_report.html  PrivIMU_report.md
reports/: README.md  metrics.example.json  run_summary.md
slides/: PrivIMU_deck.html  PrivIMU_final.pptx  build_pptx.py  build_privimu_deck.js  slides.md
slides/speaker_notes/: M1_intro.md  M2_sota.md  M3_methodo.md  M4_demo.md  M5_results.md
src/privimu/: __init__.py  config.py  data.py  demo_samples.py  evaluate.py  features.py  metrics.py  model_cnn.py  model_rf.py  train.py  viz.py
tests/: test_data.py  test_features.py  test_metrics.py
